# agentic-api

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: main.py
app/agents/: base.py
app/agents/code/: agent.py  prompts.py
app/agents/content/: agent.py  prompts.py
app/api/: deps.py  health.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  auth.py
app/cache/: service.py
app/core/: config.py  error_codes.py  exceptions.py  jwt.py  logging.py
app/db/postgres/: events.py  session.py
app/middleware/: rate_limit.py  request_logging.py
app/models/: __init__.py  user.py
app/peer/: peer_agent.py  registry.py  rules.py
app/repositories/interfaces/: base.py
app/repositories/mongodb/: base.py  jobs.py  log_events.py
app/repositories/postgres/: base.py  user.py
app/schemas/: agent_code.py  agent_content.py  api.py  auth.py  jobs.py  logs.py
app/services/: auth.py  interfaces.py  jobs_orchestrator.py  llm.py  queue.py  search_factory.py  serpapi.py  web.py
app/sse/: events.py
app/workers/: celery_config.py  tasks.py
compose/development/: Dockerfile.api  Dockerfile.celery  Dockerfile.flower
compose/production/: Dockerfile.api  Dockerfile.celery
docs/: api-usage.md  docker_setup.md
migrations/: env.py
migrations/versions/: 637d9b9355b2_initial_migration.py
scripts/: migrations.sh
tests/unit/: test_agents.py  test_agents_content.py  test_orchestrator.py  test_peer_agent.py
tests/unit/fixtures/: llm.py
